# BHF

./: README.md
data/: test_all_glasner.txt  train_neg_glasner.txt  train_pos_GT_1_pose_ze.txt  train_pos_GT_2_pose_ze.txt  train_pos_GT_3_pose_ze.txt  train_pos_GT_4_pose_ze.txt  train_pos_GT_6_pose_ze.txt  train_pos_GT_8_pose_ze.txt
scripts_results/: eval_results.m
scripts_results/data/: test_all_gt.txt  test_images.txt
src/apps/houghdetection/: CMakeLists.txt  DataLoaderHoughObject.cpp  DataLoaderHoughObject.h  HoughDetector.cpp  HoughDetector.h  main.cpp
src/rflib/: ADForest.cpp  ADForest.h  ADJointClassRegrForest.cpp  ADJointClassRegrForest.h  ARForest.cpp  ARForest.h  AppContext.cpp  AppContext.h  AppContextJointClassRegr.h  AppContextML.h  BoostedForest.cpp  BoostedForest.h  FeatureGeneratorRGBImage.cpp  FeatureGeneratorRGBImage.h  JointClassRegrForest.cpp  JointClassRegrForest.h  JointClassRegrTree.cpp  JointClassRegrTree.h  LabelJointClassRegr.cpp  LabelJointClassRegr.h  LabelMLClass.h  LabelMLRegr.h  LeafNodeStatisticsJointClassRegr.cpp  LeafNodeStatisticsJointClassRegr.h  LeafNodeStatisticsMLClass.cpp  LeafNodeStatisticsMLClass.h  LeafNodeStatisticsMLRegr.cpp  LeafNodeStatisticsMLRegr.h  SampleImgPatch.h  SampleML.h  SplitEvaluatorJointClassRegr.cpp  SplitEvaluatorJointClassRegr.h  SplitEvaluatorMLClass.cpp  SplitEvaluatorMLClass.h  SplitEvaluatorMLRegr.cpp  SplitEvaluatorMLRegr.h  SplitFunctionImgPatch.cpp  SplitFunctionImgPatch.h  SplitFunctionML.cpp  SplitFunctionML.h
src/rflib/core/: DataSet.h  Interfaces.h  LabelledSample.h  Node.cpp  Node.h  RFCoreParameters.h  RandomForest.cpp  RandomForest.h  RandomTree.cpp  RandomTree.h  Utilities.h  icgrf.h
